# rag

./: .env.example  .gitignore  CLEANUP_ANALYSIS.md  README.md  config.example.json  pyproject.toml  requirements.txt  verify_chunking.py  verify_config.py  verify_ocr.py  verify_output_formatter.py  verify_rag_engine.py  verify_vector_store.py
.kiro/specs/property-data-extraction/: design.md  requirements.md  tasks.md
config/: README.md
docs/: CHUNKING_IMPLEMENTATION_SUMMARY.md  CHUNKING_MODULE.md  CONFIGURATION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_MODULE.md  RAGAS_EVALUATOR.md  RAGAS_EVALUATOR_IMPLEMENTATION_SUMMARY.md  RAG_EXTRACTION_ENGINE.md  VECTOR_STORE_IMPLEMENTATION_SUMMARY.md  VECTOR_STORE_MODULE.md
examples/: chunking_usage.py  config_usage.py  ocr_usage.py  ragas_evaluator_usage.py  vector_store_usage.py
scripts/verify/: README.md  verify_ocr.py  verify_ragas_evaluator.py
src/: __init__.py
src/chunking/: __init__.py  chunker.py
src/config/: __init__.py  loader.py  settings.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/models/: __init__.py  chunk_models.py  error_models.py  evaluation_models.py  feature_models.py  ocr_models.py  output_formatter.py  pipeline_models.py  property_features.py
src/ocr/: __init__.py  ocr_module.py
src/pipeline/: __init__.py
src/rag/: __init__.py  extraction_engine.py
src/vector_store/: __init__.py  chroma_store.py  vector_store.py
tests/: __init__.py  test_chunking.py  test_config.py  test_ocr.py  test_rag_engine.py  test_ragas_evaluator.py
